@@ -31,6 +31,8 @@
 #define DEFAULT_HOST_PERFDATA_FILE_TEMPLATE "[HOSTPERFDATA]\t$TIMET$\t$HOSTNAME$\t$HOSTEXECUTIONTIME$\t$HOSTOUTPUT$\t$HOSTPERFDATA$"
 #define DEFAULT_SERVICE_PERFDATA_FILE_TEMPLATE "[SERVICEPERFDATA]\t$TIMET$\t$HOSTNAME$\t$SERVICEDESC$\t$SERVICEEXECUTIONTIME$\t$SERVICELATENCY$\t$SERVICEOUTPUT$\t$SERVICEPERFDATA$"
 
+#define DEFAULT_HOST_PERFDATA_PROCESS_EMPTY_RESULTS 1
+#define DEFAULT_SERVICE_PERFDATA_PROCESS_EMPTY_RESULTS 1
 
 
 int xpddefault_initialize_performance_data(char *);
